# Wealthyfy

./: .gitignore
Wealthyfy-BE/: .env.example  celerybeat-schedule  impcmmd.py  main.py  pyproject.toml
Wealthyfy-BE/app/api/: __init__.py  account.py  events.py  keycloak_events.py  pusher.py  transaction.py  user.py
Wealthyfy-BE/app/config/: celery_app.py  database.py  logger.py  setting.py
Wealthyfy-BE/app/constants/: constant.py  keycloak_urls.py  keyclock.py  message.py  pusher_events.py  regex.py  setu_api.py  setu_events.py
Wealthyfy-BE/app/dependencies/: auth.py
Wealthyfy-BE/app/models/: __init__.py  account_summary.py  accounts_holder.py  bank_transaction.py  banking_account_details.py  consent_cancellation_log.py  consent_data_session.py  consent_fI_type.py  consent_request.py  financial_accounts.py  financial_institutions.py  pancard.py  term_deposit_details.py  user.py
Wealthyfy-BE/app/schemas/: account.py  otp.py  pagination.py  pancard.py  pusher.py  response.py  setu.py  transaction.py  user.py
Wealthyfy-BE/app/services/: account_service.py  base_service.py  keyclock_service.py  pusher_service.py  setu_service.py  transaction_service.py  twillo_service.py  user_services.py
Wealthyfy-BE/app/types/: pan.py  phone.py
Wealthyfy-BE/app/utils/: encryption_helper.py  env_helper.py  helper.py  logger_util.py  response.py
Wealthyfy-BE/migrations/: env.py
Wealthyfy-BE/migrations/versions/: 000d8e12d5fb_added_new_columns_in_fip_id_master_table.py  105c39187934_rename_the_column_name.py  1cc9baac77bd_create_users_table.py  20ad9b8cc3d1_add_new_table_for_cancellation_logs.py  29589d46e1b2_add_new_table_pancard.py  2a4473ed83fb_add_new_column_in_user_table.py  3474fcc9cf80_add_new_status_column.py  36d0bf8d7ab7_added_new_column.py  4e79068b8c6d_update_the_user_table.py  (+14 more)
(+148 files in other folders)
