[project]
name = "wealthyfy-be"
version = "0.1.0"
description = ""
authors = [
    {name = "Jitender Singh",email = "jitendersingh3549@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.120.3,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-keycloak (>=5.8.1,<6.0.0)",
    "fastapi-keycloak (>=1.1.1,<2.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
