[tool.poetry]
name = "wealthyfy-be"
version = "0.1.0"
description = ""
authors = ["Jitender Singh <jitendersingh3549@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.120.3,<0.121.0"
uvicorn = { extras = ["standard"], version = ">=0.38.0,<0.39.0" }
sqlalchemy = ">=2.0.44,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
alembic = ">=1.17.1,<2.0.0"
pydantic = { extras = ["email"], version = ">=2.12.3,<3.0.0" }
pydantic-settings = ">=2.11.0,<3.0.0"
python-keycloak = ">=5.8.1,<6.0.0"
fastapi-keycloak = ">=1.1.1,<2.0.0"
redis = ">=7.0.1,<8.0.0"
celery = ">=5.5.3,<6.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
httpx = ">=0.28.1,<0.29.0"
cryptography = "^46.0.3"
twilio = "^9.8.6"
pusher = "^3.3.3"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
